# cpp_template

./: .gitignore  CMakeLists.txt  README.md
include/program/: console.h  system.h
src/: main.cpp
src/program/: console.cpp  system.cpp
